--- a/index.html
+++ b/index.html
@@ -30,6 +30,51 @@
     </header>
     <div id="time-containter" class="container">
       <!-- Timeblocks go here -->
+      <div class="time-block row nine">
+        <p class="hour col-1">9:00 AM </p>
+        <textarea class="textarea col-10" id="09"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ten">
+        <p class="hour col-1">10:00AM </p>
+        <textarea class="textarea col-10 input-note" id="10"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row eleven">
+        <p class="hour col-1">11:00AM </p>
+        <textarea class="textarea col-10 input-note" id="11"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row tweleve">
+        <p class="hour col-1">12:00PM </p>
+        <textarea class="textarea col-10 input-note" id="12"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ">
+        <p class="hour col-1">1:00PM </p>
+        <textarea class="textarea col-10 input-note" id="13"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ">
+        <p class="hour col-1">2:00PM </p>
+        <textarea class="textarea col-10 input-note" id="14"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ">
+        <p class="hour col-1">3:00PM </p>
+        <textarea class="textarea col-10 input-note" id="15"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ">
+        <p class="hour col-1">4:00PM </p>
+        <textarea class="textarea col-10 input-note" id="16"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
+      <div class="time-block row ">
+        <p class="hour col-1">5:00PM </p>
+        <textarea class="textarea col-10 input-note" id="17"></textarea>
+        <button class="saveBtn col-1">save</button>
+      </div>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
